--- a/src/app.html
+++ b/src/app.html
@@ -3,10 +3,29 @@
 	<head>
 		<meta charset="utf-8" />
 		<link rel="icon" href="/favicon.png" />
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+		<link href="https://fonts.googleapis.com/css2?family=Amiko&display=swap" rel="stylesheet">
 		<meta name="viewport" content="width=device-width, initial-scale=1" />
 		%svelte.head%
 	</head>
+<style>
+	::-webkit-scrollbar {
+    width: 0.65rem;
+}
+
+::-webkit-scrollbar-track {
+    background: rgb(11, 8, 14);
+}
+
+::-webkit-scrollbar-thumb {
+    background: #39993A;
+}
+</style>
+
 	<body>
 		<div id="svelte">%svelte.body%</div>
+
+		
 	</body>
 </html>
